syntax = "proto3";
package proto;

option go_package= "proto/mather" ;

message MathResponse {
    int64 result = 1;
}

message MathRequest {
    int64 x = 1;
    int64 y = 2;
}

service Mather {
    rpc DoMath(MathRequest) returns (MathResponse);
}